[package]
name = "porno-extractor"
version = "0.1.0"
edition = "2021"

[lib]
name = "porno_extractor"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.74"
tokio = { version = "1.35.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
extractor-core = { path = "./crates/extractor-core" }
serde_json = "1.0.108"
anyhow = "1.0.75"
chrono = "0.4.31"
scraper = "0.18.1"
regex = "1.10.2"


[dependencies]
xvideos-extractor = { path = "./crates/xvideos-extractor" }
extractor-core = { path = "./crates/extractor-core" }
# xvideos-extractor = {path = "./crates/xvideos-extractor"}
